--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="./global.css">
   <link rel="stylesheet" href="./calculator.css">
   <title>Calculator</title>
