Refactor math functions and add overwriting var

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- second row -->
       <button
         class="light-gray enabled"
-        onclick="operation.multiplicativeInverse()"
+        onclick="operation.mathFunctions.multiplicativeInverse()"
       >
         <img
           src="./assets/unlicensed/multiplicative-inverse.svg"
@@ -71,13 +71,13 @@
       </button>
       <button
         class="light-gray enabled"
-        onclick="operation.square()"
+        onclick="operation.mathFunctions.square()"
       >
         <img src="./assets/unlicensed/number-squared.svg" alt="number squared">
       </button>
       <button
         class="light-gray enabled"
-        onclick="operation.squareRoot()"
+        onclick="operation.mathFunctions.squareRoot()"
       >
         <img src="./assets/unlicensed/square-root.svg" alt="square root">
       </button>
@@ -129,7 +129,7 @@
       <button
         class="white enabled"
         style="border-radius: 0 0 0 5px;"
-        onclick="entry.toggleSign()"
+        onclick="operation.mathFunctions.negate()"
       >
         <img src="./assets/plus-minus.svg" alt="plus minus">
       </button>
