Add equal operation

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       <button 
         class="dark-gray"
         style="border-radius: 0 0 5px 0;"
+        onclick="operation.equal()"
       >=</button>
     </div>
   </div>
