Add percentage operation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </div>
     <div class="keyboard">
       <!-- first row -->
-      <button class="light-gray enabled">
+      <button
+        class="light-gray enabled"
+        onclick="operation.percentage()"
+      >
         <img src="./assets/percentage.svg" alt="percentage">
       </button>
       <button
