--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/calculator.css">
+  <link rel="stylesheet" href="./css/bottom-card.css">
   <link rel="stylesheet" href="./css/menu-card.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,6 +81,34 @@
           </li>
         </ul>
       </section>
+    </div>
+    <div class="bottom-card history empty">
+      <p>There’s no history yet</p>
+      <div class="content">
+        <div class="saves-container thin-scroll">
+          <ul>
+          </ul>
+        </div>
+        <button
+          class="clear-saves"
+        >
+          <img src="./assets/trash.svg" alt="clear history">
+        </button>
+      </div>
+    </div>
+    <div class="bottom-card memory empty">
+      <p>There’s nothing saved in memory</p>
+      <div class="content">
+        <div class="saves-container thin-scroll">
+          <ul>
+          </ul>
+        </div>
+        <button
+          class="clear-saves"
+        >
+          <img src="./assets/trash.svg" alt="clear memory">
+        </button>
+      </div>
     </div>
     <p>Calculator</p>
     <header>
