--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/calculator.css">
   <link rel="stylesheet" href="./css/bottom-card.css">
+  <link rel="stylesheet" href="./css/history.css">
   <link rel="stylesheet" href="./css/menu-card.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg+xml">
   <title>Calculator</title>
 </head>
