Change show memory inner content

--- a/index.html
+++ b/index.html
@@ -140,7 +140,16 @@
       <button class="enabled">M-</button>
       <button class="enabled">MS</button>
       <button class="disabled" disabled>
-        <img src="./assets/unlicensed/show-memory.svg" alt="show memory">
+        <img
+          class="disabled-img"
+          src="./assets/unlicensed/show-memory-disabled.svg"
+          alt="show memory"
+        >
+        <img
+          class="enabled-img"
+          src="./assets/unlicensed/show-memory-enabled.svg"
+          alt="show memory"
+        >
       </button>
     </div>
     <div class="keyboard">
