Add bottom card scrollbar accessibility

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
   <script src="./src/history.js"></script>
   <script src="./src/memory.js"></script>
   <script src="./src/operation.js"></script>
+  <script src="./src/scrollbar.js"></script>
   <script src="./src/toggleDisplay.js"></script>
   <script>
     const bodyOverlay = document.querySelector('.body-overlay')
