--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         onclick="entry.clear()"
       >CE</button>
       <button
+        id="key Escape"
         class="light-gray clear"
         onclick="clearEverything()"
       >C</button>
@@ -278,6 +279,7 @@
       >+</button>
       <!-- sixth row -->
       <button
+        id="key F9"
         class="white enabled"
         style="border-radius: 0 0 0 5px;"
         onclick="operation.mathFunctions.negate()"
