Remove drag from images and selected texts

--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
       entry.previous = null
       entry.clear()
     }
+
+    document.querySelectorAll('img').forEach(images => images.draggable = false)
+    takeOutDrag(document.querySelector('.equation output'))
+    function takeOutDrag(element) {
+      element.addEventListener('dragstart', event => event.preventDefault())
+    }
   </script>
 </body>
 </html>
