Adjust entry font size using .output-measure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <title>Calculator</title>
 </head>
 <body>
+  <output class="output-measure">0</output>
   <div class="body-overlay"></div>
   <div class="calculator-container">
     <div class="calculator-overlay"></div>
