Add text paste feature

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
   <script src="./src/keyboardActions.js"></script>
   <script src="./src/memory.js"></script>
   <script src="./src/operation.js"></script>
+  <script src="./src/paste.js"></script>
   <script src="./src/scrollbar.js"></script>
   <script src="./src/toggleDisplay.js"></script>
   <script>
