Apply responsive layout

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <button
         id="key F9"
         class="white enabled"
-        style="border-radius: 0 0 0 5px;"
+        style="border-radius: 0 0 0 0.3rem;"
         onclick="operation.mathFunctions.negate()"
       >
         <img src="./assets/plus-minus.svg" alt="plus minus">
@@ -310,7 +310,7 @@
       <button
         id="key ="
         class="dark-gray"
-        style="border-radius: 0 0 5px 0;"
+        style="border-radius: 0 0 0.3rem 0;"
         onclick="operation.equal()"
       >=</button>
     </div>
